@@ -11,7 +11,7 @@ if (!isGeneric("sampleRegular")) {
 
 
 setMethod('sampleRegular', signature(x='Raster'), 
-function( x, size, ext=NULL, cells=FALSE, xy=FALSE, asRaster=FALSE, useGDAL=FALSE, ...) {
+function( x, size, ext=NULL, cells=FALSE, xy=FALSE, asRaster=FALSE, sp=FALSE, useGDAL=FALSE, ...) {
 
 	stopifnot(hasValues(x))
 	
@@ -72,36 +72,59 @@ function( x, size, ext=NULL, cells=FALSE, xy=FALSE, asRaster=FALSE, useGDAL=FALS
 
 	cols <- unique(round(cols))
 	rows <- unique(round(rows))
-	cols = cols[cols>0]
-	rows = rows[rows>0]
+	cols <- cols[cols>0]
+	rows <- rows[rows>0]
 	nr <- length(rows)
 	nc <- length(cols)
 	
 
 	if (fromDisk(x)) {
 		
-		if (rotated | cells | (.driver(x, FALSE) != 'gdal')) { 
+		if (cells | any(rotated | .driver(x, FALSE) != 'gdal')) { 
 			useGDAL <- FALSE 
 		}
 		if (useGDAL) {
 			offs <- c(firstrow,firstcol)-1
 			reg <- c(nrow(rcut), ncol(rcut))-1
-			if (nl == 1) {
-				band <- bandnr(x)
+			if (inherits(x, 'RasterStack')) {
+				
+				v <- matrix(NA, ncol=nl, nrow=prod(nr, nc))
+				
+				for (i in 1:nl) {
+					xx <- x[[i]]
+					con <- GDAL.open(xx@file@name, silent=TRUE)
+					band <- bandnr(xx)
+					vv <- getRasterData(con, band=band, offset=offs, region.dim=reg, output.dim=c(nr, nc)) 
+					closeDataset(con)
+					if (xx@data@gain != 1 | xx@data@offset != 0) {
+						vv <- vv * xx@data@gain + xx@data@offset
+					}
+					if (xx@file@nodatavalue < 0) {
+						vv[vv <= xx@file@nodatavalue] <- NA
+					} else {
+						vv[vv == xx@file@nodatavalue] <- NA
+					}
+					v[, i] <- vv
+				}
+				
 			} else {
-				band <- NULL
-			}
-			con <- GDAL.open(x@file@name, silent=TRUE)
-			v <- getRasterData(con, band=band, offset=offs, region.dim=reg, output.dim=c(nr, nc)) 
-			closeDataset(con)
-			v <- as.vector(v)
-			if (x@data@gain != 1 | x@data@offset != 0) {
-				v <- v * x@data@gain + x@data@offset
-			}
-			if (x@file@nodatavalue < 0) {
-				v[v <= x@file@nodatavalue] <- NA
-			} else {
-				v[v == x@file@nodatavalue] <- NA
+				if (nl == 1) {
+					band <- bandnr(x)
+				} else {
+					band <- NULL
+				}
+				con <- GDAL.open(x@file@name, silent=TRUE)
+				v <- getRasterData(con, band=band, offset=offs, region.dim=reg, output.dim=c(nr, nc)) 
+				closeDataset(con)
+				
+				if (x@data@gain != 1 | x@data@offset != 0) {
+					v <- v * x@data@gain + x@data@offset
+				}
+				if (x@file@nodatavalue < 0) {
+					v[v <= x@file@nodatavalue] <- NA
+				} else {
+					v[v == x@file@nodatavalue] <- NA
+				}
 			}
 	
 			if (asRaster) {
@@ -118,6 +141,7 @@ function( x, size, ext=NULL, cells=FALSE, xy=FALSE, asRaster=FALSE, useGDAL=FALS
 				} else {
 					outras <- setValues(outras, as.vector(v))
 				}
+				return(outras)
 				
 			} else {
 				if (cells) {
@@ -178,6 +202,11 @@ function( x, size, ext=NULL, cells=FALSE, xy=FALSE, asRaster=FALSE, useGDAL=FALS
 			m <- cbind(m, cell=cell)
 		} 
 		m <- cbind(m, .cellValues(x, cell))
+		
+		if (sp) {
+			m <- SpatialPointsDataFrame(xyFromCell(x, cell), m)
+		}
+		
 		return(m)
 	}	
 }
